Fix title overlapping (issue #2)

--- a/_docs/_styles/styles.styl
+++ b/_docs/_styles/styles.styl
@@ -613,13 +613,16 @@ footer
                 p
                     font italic Light 3.0rem FiraSans
                     color cKoutoSwiss
+        &.usage
+            h4:nth-of-type( 2 )
+                margin 40px 10px 20px
         body.home &
             width 800px
             margin 30px auto 0
         h3
-            width 300%
-            margin 10px -100% 50px
-            padding 5px 100% 0
+            width 600%
+            margin 10px -250% 50px
+            padding 5px 250% 0
             font normal 3.2rem/2 Norwester
             transform rotate( -5deg )
     div.docs
